--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Local .terraform directories
 **/.terraform/*
 
+# Ignore the Terraform lock file
+*.terraform.lock.hcl
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
