--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -57,4 +57,6 @@ jobs:
       - name: Run Python script
         run: |
           ls watson/
-          python watson/watson/watson.py # Adjust path if necessary
+          pwd
+          #python watson/watson/watson.py
+          # Adjust path if necessary
