--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -27,7 +27,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: |
+          ls .
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -72,7 +73,7 @@ jobs:
           echo "ls /////"
           ls /home/runner/work/eks_infra/eks_infra
           echo "ls eks infra infra"
-          ls ./eks_infra/eks_infra
+          echo $GITHUB_WORKSPACE
           pwd
           #python watson/watson.py ./eks_infra/eks-cluster ${{ secrets.PROJECT_API_KEY_2 }}
 
