--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: whiteboard-organization/watsonX-ai.git
-          path: .
+          path: watsonX
           ref: hackathon/rt-01
           token: ${{ secrets.MY_GITHUB_TOKEN }}
 
