--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -82,7 +82,7 @@ jobs:
           ls .
           pwd
           python watsonX/watson/watson.py eks-cluster ${{ secrets.PROJECT_API_KEY_2 }}
-          ls /home/runner/work/eks_infra/eks_infra/watsonX/watson/../docs/
+          ls /home/runner/work/eks_infra/eks_infra/watsonX/
 
       - name: Install techdocs-cli
         run: sudo npm install -g @techdocs/cli
@@ -91,7 +91,7 @@ jobs:
         run: python -m pip install mkdocs-techdocs-core==1.*
 
       - name: Generate docs site
-        run: techdocs-cli generate --no-docker --verbose --source-dir /home/runner/work/eks_infra/eks_infra/watsonX/watson/../docs/
+        run: techdocs-cli generate --no-docker --verbose --source-dir /home/runner/work/eks_infra/eks_infra/watsonX
 
       - name: Publish docs site
-        run: techdocs-cli publish --publisher-type awsS3 --storage-name $TECHDOCS_S3_BUCKET_NAME --entity $ENTITY_NAMESPACE/$ENTITY_KIND/$ENTITY_NAME --source-dir /home/runner/work/eks_infra/eks_infra/watsonX/watson/../generated-docs/
+        run: techdocs-cli publish --publisher-type awsS3 --storage-name $TECHDOCS_S3_BUCKET_NAME --entity $ENTITY_NAMESPACE/$ENTITY_KIND/$ENTITY_NAME --source-dir /home/runner/work/eks_infra/eks_infra/watsonX/
