--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -1,51 +1,24 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Generate documentation using Granite
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "develop" branch
   push:
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
       TECHDOCS_S3_BUCKET_NAME: ${{ secrets.TECHDOCS_S3_BUCKET_NAME }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'eu-north-1'
       ENTITY_NAMESPACE: 'default'
       ENTITY_KIND: 'Component'
       ENTITY_NAME: 'my-doc-entity'
-      # In a Software template, Scaffolder will replace {{cookiecutter.component_id | jsonify}}
-      # with the correct entity name. This is same as metadata.name in the entity's catalog-info.yaml
-      # ENTITY_NAME: '{{ cookiecutter.component_id | jsonify }}'
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: |
-          ls .
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          
       - name: Checkout external repository
         uses: actions/checkout@v3
         with:
@@ -57,7 +30,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'  # Specify the Python version you need
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
@@ -78,9 +51,6 @@ jobs:
 
       - name: Run Python script
         run: |
-          echo "this ls ."
-          ls .
-          pwd
           python watsonX/watson/watson.py eks-cluster ${{ secrets.PROJECT_API_KEY_2 }}
           ls /home/runner/work/eks_infra/eks_infra/watsonX/
 
