--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -2,7 +2,7 @@ name: Generate documentation using Granite
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "develop", "feat/generate-docs" ]
   pull_request:
     branches: [ "develop" ]
 
@@ -24,7 +24,7 @@ jobs:
         with:
           repository: whiteboard-organization/watsonX-ai.git
           path: watsonX
-          ref: hackathon/rt-01
+          ref: hackathon/oa-01
           token: ${{ secrets.MY_GITHUB_TOKEN }}
 
       - name: Set up Python
