--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -24,8 +24,10 @@ jobs:
         with:
           repository: whiteboard-organization/watsonX-ai.git
           path: watsonX
-          ref: hackathon/oa-01
+          ref: hackathon/rt-01/6dfe7437567503e5ad72ddc952c7c5a85fa0de11
           token: ${{ secrets.MY_GITHUB_TOKEN }}
+          fetch-depth: 0
+
 
       - name: Set up Python
         uses: actions/setup-python@v4
