--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -1,3 +1,4 @@
+
 name: Generate documentation using Granite
 
 on:
@@ -11,13 +12,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      TECHDOCS_S3_BUCKET_NAME: ${{ secrets.TECHDOCS_S3_BUCKET_NAME }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      ENTITY_NAMESPACE: 'default'
-      ENTITY_KIND: 'Component'
-      ENTITY_NAME: 'my-doc-entity'
     steps:
       - uses: actions/checkout@v4
 
@@ -68,4 +62,11 @@ jobs:
         run: techdocs-cli generate --no-docker --verbose --source-dir /home/runner/work/eks_infra/eks_infra/watsonX
 
       - name: Publish docs site
-        run: techdocs-cli publish --publisher-type awsS3 --storage-name $TECHDOCS_S3_BUCKET_NAME  --directory /home/runner/work/eks_infra/eks_infra/site
+        env:
+          TECHDOCS_S3_BUCKET_NAME: ${{ secrets.TECHDOCS_S3_BUCKET_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          ENTITY_NAMESPACE: 'default'
+          ENTITY_KIND: 'Component'
+          ENTITY_NAME: 'my-doc-entity'
+        run: techdocs-cli publish --publisher-type awsS3 --storage-name ${{secrets.TECHDOCS_S3_BUCKET_NAME}} --directory /home/runner/work/eks_infra/eks_infra/site
